# npm_commit_detection

./: .gitignore  README.md  TUI_README.md  all_dynamic_report.json  analyzer.py  dynamic_analysis.py  dynamic_analysis_steps.md  list-of-realworld-repo.json  main.py  package-hunter-log.json  package-lock.json  pre_analysis.py  predicted_commits.json  predicted_time.json  pyproject.toml  realworld-repo.txt  requirements.txt  static_analysis.py  stress_test.py  stress_test_realworld.py  stress_test_report.md  test_tui.py  tui.py  verification.py
analyzers/: pre_analysis.py
configs/: deobfuscation_config.py  llm_config.py  static_config.py
llm/: deobfuscator_agent.py  service.py  static_analysis.py  verification.py
prompts/: deobfuscation_prompts.py
reports/: analysis_report_8.19.1_20251112_135641.txt  analysis_report_8.19.1_20251112_135916.txt  analysis_report_8.19.5_20251216_211539.json  analysis_report_v8.19.4-malware-demo_20251121_221539.txt  analysis_report_v8.19.4-malware-demo_20251121_222104.txt  analysis_report_v8.19.4-malware-demo_20251125_234023.txt  analysis_report_v8.19.4-malware-demo_20251127_233917.json  analysis_report_v8.19.4-malware-demo_20251127_233917.txt  dynamic_report_12991f90_20251203_004045.json  dynamic_report_12991f90_20251203_005051.json  dynamic_report_4e16637b_20251220_153334.json  dynamic_report_4e16637b_20251220_154208.json  dynamic_report_4e16637b_20251220_154735.json  dynamic_report_98b1e819_20251220_154840.json  dynamic_report_a631ed87_20251220_154854.json  dynamic_report_aae3118a_20251220_154825.json  (+7 more)
scripts/: format_latex.py  (+1 more)
(+40 files in other folders)
