[project]
name = "commit-detection"
version = "0.2.0"
description = "NPM Commit Detection with Pre-Analysis and Static Analysis using LangGraph and OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "langsmith>=0.2.0",
    "python-dotenv>=1.0.0",
]
